letter spacing on the h1 element fixed

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 h1 {
     text-transform: uppercase;
     font-size: 60px;
-    letter-spacing: 10px;
+    letter-spacing: 13px;
     color: hsl(0, 6%, 24%);
     line-height: 1.1;
     margin-bottom: 0;
